--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "cs_reco"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+ndarray = "0.15.4"
+byteorder = "1.4.3"
+toml = "0.5.9"
+serde = { version = "1.0", features = ["derive"] }
+whoami = "1.2.1"
