--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ toml = "0.5.9"
 serde = { version = "1.0", features = ["derive"] }
 whoami = "1.2.1"
 regex = "1.6.0"
+clap = { version = "3.2.17", features = ["derive"] }
