--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0", features = ["derive"] }
 whoami = "1.2.1"
 regex = "1.6.0"
 clap = { version = "3.2.17", features = ["derive"] }
+
+[profile.test]
+opt-level = 3
